--- a/main.html
+++ b/main.html
@@ -1,5 +1,5 @@
 <html>
-<head><title>Virat Kohli</title>
+<head><title>Virat Kohli modern master</title>
 <link rel="stylesheet" type="text/css" href="stylesheet.css">
 
 <link type="text/css" rel="stylesheet" href="stylesheet2.css">
@@ -10,7 +10,7 @@
 
 <div id="nav">
 <br><br>
-<ul><p><b>View More</b></p>
+<ul><p><b>View More about kohli</b></p>
   <li><a href="">ALL</a></li>
   <li><a href="http://www.howstat.com/cricket/statistics/players/PlayerOverview.asp?PlayerID=3600">TEST</a></li>
   <li><a href="https://www.espncricinfo.com/india/content/player/253802.html">ODI</a></li>
